# static_website_builder

./: .gitignore  GARDEN_TOOLS_README.md  GARDEN_TOOLS_SUMMARY.md  LICENSE  QUICKSTART_GARDEN_TOOLS.md  README.md  pyproject.toml  requirements.txt  setup.py
aqui_brain_dump/: __init__.py  __main__.py  analyze_links.py  backlinks_wikilinks.py  check_external_links.py  copy_files.py  extension_citations.py  extension_tags.py  extension_wikiimage.py  feed.rss  garden_tools.py  git_process.py  main.py  note.py  notes.py  parse_bibliography.py  sitemap.xml  stats.py  util.py
aqui_brain_dump/aqui_brain_dump.egg-info/: PKG-INFO  entry_points.txt  requires.txt  top_level.txt
examples/: analyze_garden.py
static/: bundle.min.css  prism.css  prism.js  style.css  style.min.css
templates/: article.html  base.html  gulpfile.js  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js
templates/css/: style.css
templates/static/: fonts.css  prism.css  style.css
templates/static/css/: style.css
