[tool.poetry]
name = "aqui-brain-dump"
version = "0.1.2"
description = "Create a static website based on notes from a digital garden"
authors = ["Aquiles Carattino <aqui.carattino@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "aqui_brain_dump"}]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.12.2"
Jinja2 = "^3.1.2"
Markdown = "^3.4.3"
markdown-checklist = "^0.4.4"
MarkupSafe = "^2.1.3"
md4mathjax = "^0.1.3"
pyembed = "^1.3.3"
pyembed-markdown = "^1.1.0"
python-frontmatter = "^1.0.0"
PyYAML = "^6.0"
text-unidecode = "^1.3"

[tool.poetry.scripts]
brain_dump = 'aqui_brain_dump.__main__:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
